--- a/src/Iris.WebApi/Iris.WebApi.csproj
+++ b/src/Iris.WebApi/Iris.WebApi.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.1.25451.107" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.11.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
   </ItemGroup>
 
 </Project>
