refactor: separates redis ioc

--- a/compose.debug.yaml
+++ b/compose.debug.yaml
@@ -8,6 +8,8 @@ services:
       dockerfile: src/Iris.WebApi/Dockerfile
       args:
         - configuration=Debug
+      environment:
+        - ConnectionStrings__Redis=redis:6379        
     ports:
       - 5164:5164
     environment:
