--- a/src/Iris.WebApi/appsettings.Development.json
+++ b/src/Iris.WebApi/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "Redis": "localhost"
+  },
+  "HttpClients": {
+    "BCB": {
+      "BaseUrl": "https://api.bcb.gov.br/",
+      "TimeoutInSeconds": 5
+    }
   }
 }
