--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,8 @@ services:
       dockerfile: src/Iris.WebApi/Dockerfile
     environment:
       - ConnectionStrings__Redis=redis:6379
+      - HttpClients__BCB__BaseUrl=https://api.bcb.gov.br
+      - HttpClients__BCB__TimeoutInSeconds=5
     ports:
       - 5164:5164
   redis:
