--- a/compose.yaml
+++ b/compose.yaml
@@ -9,10 +9,39 @@ services:
     environment:
       - ConnectionStrings__Redis=redis:6379
       - HttpClients__BCB__BaseUrl=https://api.bcb.gov.br
-      - HttpClients__BCB__TimeoutInSeconds=5
+      - HttpClients__BCB__TimeoutInSeconds=60
+    expose:
+      - 5164
+    deploy:
+      mode: replicated
+      replicas: 2
+      restart_policy:
+        condition: on-failure 
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 120M
+    networks:
+      - iris-network
+
+  nginx:
+    image: nginx:1.29.1-alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
-      - 5164:5164
+      - 3333:3333
+    depends_on:
+      - api
+    networks:
+      - iris-network      
+
   redis:
     image: redis:7.0-alpine
     ports:
       - 6379:6379
+    networks:
+      - iris-network      
+
+networks:
+  iris-network:
+    driver: bridge      
