chore: updates compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -34,15 +34,21 @@ services:
       - 3333:3333
     depends_on:
       - api
+    deploy:
+      resources:
+        limits:
+          cpus: 0.5
+          memory: 256M
     networks:
       - iris-network      
 
   redis:
-    image: redis:7.0-alpine
+    image: redislabs/redistimeseries:latest
+    platform: linux/amd64
     ports:
       - 6379:6379
     networks:
-      - iris-network      
+      - iris-network     
 
 networks:
   iris-network:
