--- a/tests/Iris.WebApi.FunctionalTests/Iris.WebApi.FunctionalTests.csproj
+++ b/tests/Iris.WebApi.FunctionalTests/Iris.WebApi.FunctionalTests.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit.v3" Version="3.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3" />
@@ -29,6 +30,10 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Iris.WebApi\Iris.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
